--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.0",
     "ethers": "^5",
     "react": "^18.2.0",
+    "kaboom": "2000.0.0-beta.24",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
